--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
-    <link href="./style.css" rel='stylesheet' / />
+    <link href="./style.css" rel='stylesheet' />
+    <title>MONEY</title>
   </head>
   <body>
     <div class="image"></div>
